--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -31,6 +31,7 @@
         <!-- <server name="SYMFONY_PROCESS" value="/path/to/Process" /> -->
         <!-- <server name="TWIG_LIB" value="/path/to/twig/lib" /> -->
         <!-- <server name="YUI_COMPRESSOR_JAR" value="/path/to/yuicompressor-2.4.2.jar" /> -->
+        <!-- <server name="TYPESCRIPT_BIN" value="/path/to/tsc" /> -->
         <!-- <server name="UGLIFYJS_BIN" value="/path/to/uglifyjs" /> -->
         <!-- <server name="UGLIFYCSS_BIN" value="/path/to/uglifycss" /> -->
         <!-- <server name="PACKER" value="/path/to/class.JavaScriptPacker.php" /> -->
